# fave-asr

./: .gitignore  .nojekyll  CITATION.cff  README.md  formatter.py  index.html  pipeline.py  pyproject.toml  requirements-dev.txt  requirements-tuning.txt  requirements.txt  search.json  sitemap.xml  tuner.py
.github/workflows/: build.yml  quarto_docs.yml  test-and-lint.yml
doc_src/: Makefile  SnoopDogg_85SouthMedia.TextGrid  _quarto.yml  index.qmd  objects.json
doc_src/_site/: index.html  robots.txt  search.json
doc_src/_site/reference/: fave_asr.html  index.html
doc_src/_site/site_libs/bootstrap/: bootstrap.min.css
doc_src/_site/usage/: gated_models.html  index.html
doc_src/reference/: _sidebar.yml  fave_asr.qmd  index.qmd
doc_src/usage/: gated_models.qmd  index.qmd
reference/: fave_asr.html
site_libs/bootstrap/: bootstrap-dark.min.css
src/fave_asr/: __init__.py  fave_asr.py  formatter.py  pipeline.py
tests/: test_formatter.py  test_pipeline.py
tests/data/: README.md  TestAudio_SnoopDogg_85SouthMedia.TextGrid  TestAudio_SnoopDogg_85SouthMedia.csv  TestAudio_SnoopDogg_85SouthMedia.json  TestAudio_SnoopDogg_85SouthMedia_WhisperTimestampSegments.json  TestAudio_SnoopDogg_85SouthMedia_aligned.json  TestAudio_SnoopDogg_85SouthMedia_segments.json
usage/: gated_models.html  index.html
