[tool.poetry]
name = "fave-asr"
version = "0.1.0"
description = "Automated transcription and diarization of linguistic data"
authors = ["Christian Brickhouse <brickhouse@stanford.edu>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "fave_asr", from="src"}]
repository = "https://github.com/Forced-Alignment-and-Vowel-Extraction/fave-asr"

[tool.poetry.dependencies]
python = "^3.10"
whisper-timestamped = "^1.15.3"
TextGrid = "^1.6.1"
GPUtil = "^1.4.0"
psutil = "^5.9.8"
whisperx = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.1"
numpy = "^1.26.4"
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
codecov = "^2.1.13"

[tool.poetry.group.docs.dependencies]
textgrid = "^1.5"
quartodoc = "0.6.5"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
	"--import-mode=importlib",
	"--cov-config=.coveragerc",
	"--cov"
]
pythonpath = "src"
testpaths = "tests"
